--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -3,6 +3,8 @@ run-name: ${{ github.actor }} is learning GitHub Actions
 
 on: [push]
 
+
+
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
@@ -18,7 +20,9 @@ jobs:
     permissions:
       contents: read
       packages: write
-
+    env:
+      REGISTRY: ghcr.io
+      IMAGE_NAME: ${{ github.repository }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
